v0.1.16 Fix enum filtering